# WallTheme

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test-release.yml  testing.yml
tests/: conftest.py  test_jinja.py  test_utils.py
tests/test_themes/: colors  colors.css  colors.json  colors.scss  colors.txt
walltheme/: __init__.py  __main__.py  colors.py  jinja.py  settings.py  utils.py
