[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "walltheme"
authors = [{ name = "Leandro Pata", email = "lmfpata@gmail.com" }]
description = "Generate themes based on an image's dominante colors"
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["matplotlib", "jinja2"]

[project.scripts]
walltheme = "walltheme.__main__:main"


## Ruff preferences
[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.ruff.lint]
# To prevent unused modules to be deleted upon formatting
unfixable = ["F401"]
